[package]
name = "twitter-stream-types"
version = "0.1.0"
authors = ["Daiki Mizukami <mizukami1113@gmail.com>"]
publish = false

[dependencies]
clap = "2"
futures = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio-core = "0.1"
tokio-signal = "0.1"
twitter-stream = { git = "https://github.com/dmizuk/twitter-stream-rs", default-features = false, features = ["tls", "use-serde"] }
